--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-watch": "^4.3.11",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.0",
+    "postcss-animation": "0.0.11",
     "postcss-clean": "^1.0.2",
     "postcss-sprites": "^4.1.1",
     "rimraf": "^2.5.4",
@@ -37,6 +38,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "inview": "0.0.5",
     "jquery": "^3.1.1",
     "slick-carousel": "^1.6.0",
     "wowjs": "^1.1.3"
